Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55065

QSettings::setPath documentation refers to COMMON_APPDATA environment variable which does not exist

    XMLWordPrintable

Details

    • ff68be114e3db8bf1d2fa1fd0153862a25bf5e8b (qtbase/5.6, 16.8.2016, 5.6.2)

    Description

      In a table here, under Windows and system scope:
      http://doc.qt.io/qt-5/qsettings.html#setPath

      It actually points to path which can be queried through SHGetSpecialFolderPath Win32 API function with CSIDL_COMMON_APPDATA parameter.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes